# EmailEngine

./: .env.example  Cargo.toml  README.md
src/: api.rs  config.rs  email.rs  main.rs
