[package]
name = "rust-mailer"
version = "0.1.0"
edition = "2021"

[dependencies]
lettre = { version = "0.10.4", default-features = false, features = [
    "builder",
    "serde",
    "smtp-transport",
    "tokio1",
    "tokio1-native-tls"
] }
anyhow = "1.0"
dotenvy = "0.15"
handlebars = "5.1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
regex = "1.0"